--- a/laravel-moncash-example/resources/css/header.scss
+++ b/laravel-moncash-example/resources/css/header.scss
@@ -20,12 +20,15 @@
     }
 
     #mega-menu-dropdown {
-
-        @apply text-sm rounded-lg shadow-lg border border-gray-800 md:grid-cols-4 bg-gray-900;
+        @apply text-sm rounded-lg shadow-md border border-gray-800 bg-gray-800  grid-cols-3  absolute z-20;
+        width: 450px;
 
         li {
             a {
-                @apply text-gray-400  hover:text-red-500
+                @apply text-gray-400  hover:text-red-500 flex items-center justify-start;
+                svg{
+                    @apply w-5 h-5 mr-2
+                }
             }
         }
     }
